# Space_Shooter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/components/: CombatComponent.h  Movement1D.h  RenderComponent.h  WaveComponent.h
include/constants/: GameWorldConstants.h  MovementConstants.h  RenderConstants.h  ScoringConstants.h  TimerDurations.h  WaveConstants.h
include/entities/: Entities.h  Entity.h  EntityType.h  Explosion.h  Player.h  PowerUp.h  PowerUpType.h  Shield.h
include/entities/enemies/: Enemy.h  EnemyType.h
include/entities/projectiles/: Projectile.h  ProjectileType.h
include/game/: GameSystemID.h  GameWorld.h  IGameSystem.h
include/locators/: IAssetLocator.h  IEntityLocator.h  IRenderLocator.h  IScoreLocator.h  ITimerLocator.h  IWaveLocator.h  SystemLocator.h
include/systems/: systems.h
include/systems/assets/: AssetSystem.h  Assets.h  EffectID.h  Sprite.h  SpriteID.h  SpriteTable.h  TextureID.h
include/systems/collision/: CollisionSystem.h
include/systems/entity/: EntitySystem.h
include/systems/movement/: MovementSystem.h
include/systems/rendering/: BackgroundSystem.h  MessageUi.h  RenderSystem.h  scoreUI.h
include/systems/scoring/: LvlUpType.h  ScoreSystem.h
include/systems/timer/: Timer.h  TimerSystem.h
include/systems/waving/: BezierCurves.h  DiveType.h  FormationSlot.h  Wave.h  WavePhase.h  WaveSystem.h
include/utils/: utils.h
src/: BezierCurve.cpp  Entity.h  EntityType.h  Game.cpp  Game.h  GameWorld.cpp  GameWorld.h  Player.cpp  main.cpp
src/Components/: PositionComponent.h
src/Constants/: GameConstants.h  GameWorldConstants.h  MovementConstants.h  RenderConstants.h  ScoringConstants.h  WaveConstants.h
src/Entities/: CombatData.h  Enemy.cpp  Enemy.h  EnemyID.h  Entities.h  Entity.h  EntityID.h  EntityType.h  Movement1D.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  RenderData.h
src/Entities/Components/: CombatComponent.h  Movement1D.h  Movement2D.h  RenderComponent.h  Timer.h  TimerComponent.h  WaveComponent.h  WaveState.h
src/Entities/Enemies/: Enemy.h  EnemyID.h  EnemyType.h
src/Entities/Player/: Player.cpp  Player.h
src/Entities/Projectiles/: Projectile.h  ProjectileType.h
src/Game/: Game.cpp  Game.h  GameState.h  GameWorld.cpp  GameWorld.h
src/Helper/: EnumHash.h
src/Locators/: IAssetLocator.h  IEntityLocator.h  IScoreLocator.h  ITimerLocator.h  SystemLocator.cpp  SystemLocator.h
src/SystemService/: IAssetLocator.h  IAssetService.cpp  IAssetService.h  IEntityLocator.h  IEntityService.cpp  IEntityService.h  IScoreLocator.h  IScoreService.cpp  IScoreService.h  SystemLocator.h  SystemService.cpp  SystemService.h
src/Systems/: GameSystem.cpp  GameSystem.h  GameSystemID.h  IGameSystem.h  ISystem.cpp  ISystem.h
src/Systems/Assets/: AssetSystem.cpp  AssetSystem.h  SpriteID.h  TextureID.h
src/Systems/Collision/: CollisionSystem.cpp  CollisionSystem.h
src/Systems/Collsion/: CollisionSystem.cpp  CollisionSystem.h  CollsionSystem.cpp
src/Systems/Entities/: EntitySystem.cpp  EntitySystem.h  SpawnCommand.h  SpawnEnemyCommand.h  SpawnType.h  (+1 more)
src/Utilities/: WaveMath.h  utils.h
src/game/: Game.cpp  GameWorld.cpp
src/locators/: SystemLocator.cpp
src/systems/: AssetSystem.cpp  BackgroundSystem.cpp  CollisionSystem.cpp  EntitySystem.cpp  MovementSystem.cpp  RenderSystem.cpp  ScoreSystem.cpp  TimerSystem.cpp  WaveSystem.cpp
(+29 files in other folders)
